<resources>
    <string name="app_name">WatchStatus</string>

    <string name="task_affinity_string">WatchStatusTasks</string>
    <string name="action_settings">Settings</string>
    <string name="main">Main</string>

    <string name="cell_signal_text_title">Cellular Signal Status</string>
    <string name="battery_text_title">Battery Status</string>
    <string name="memory_text_title">Memory Status</string>

    <string name="title_activity_cell_signal_status_handler">CellSignalStatusHandler</string>

    <!-- Strings related to Notification service -->
    <string name="title_activity_notification_handler">WatchStatus: Alert!</string>

    <string name="notification_id_cell_signal">101</string>
    <string name="notification_id_battery">111</string>
    <string name="start_buzzer_button_text">Start Buzzer</string>
    <string name="no_buzzer_button_text">No, thanks</string>

    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_notifications">Notification Settings</string>pref

    <string name="pref_key_ringtone">ringtone_pref</string>
    <string name="pref_key_vibrate">vibrate_pref</string>
    <string name="pref_key_new_alert_notifications">new_alert_pref</string>

    <string name="pref_title_new_alert_notifications">New Alert notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>


</resources>
