<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Select settings for Notifications">
        <CheckBoxPreference
            android:key="@string/pref_key_new_alert_notifications"
            android:title="@string/pref_title_new_alert_notifications"
            android:defaultValue="true"
            android:summary="Set Alert for new Notifications"/>

        <RingtonePreference
            android:dependency="@string/pref_key_new_alert_notifications"
            android:key="@string/pref_key_ringtone"
            android:title="@string/pref_title_ringtone"
            android:summary="Set Ringtone for Notifications"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:layout="?android:attr/preferenceLayoutChild"
            android:defaultValue="content://settings/system/notification_sound" />

        <CheckBoxPreference
            android:dependency="@string/pref_key_new_alert_notifications"
            android:layout="?android:attr/preferenceLayoutChild"
            android:key="@string/pref_key_vibrate"
            android:title="@string/pref_title_vibrate"
            android:defaultValue="true"
            android:summary="Set Vibrate mode On/Off for Notifications"/>
    </PreferenceCategory>

</PreferenceScreen>
