<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:text="@string/cell_signal_text_title"
            android:id="@+id/cell_signal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"/>

        <ToggleButton
            android:textOn="Enabled"
            android:textOff="Disabled"
            android:id="@+id/cell_signal_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="onToggleClicked_cellSignal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:text="@string/battery_text_title"
            android:id="@+id/battery_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:textOn="Enabled"
            android:textOff="Disabled"
            android:id="@+id/battery_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onToggleClicked_battery" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <TextView
            android:text="@string/memory_text_title"
            android:id="@+id/memory_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:textOn="Enabled"
            android:textOff="Disabled"
            android:id="@+id/memory_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onToggleClicked_memory" />

    </LinearLayout>

</LinearLayout>